Validatiemeldingen tonen en laten verdwijnen als het weer goed is